src/test/deca/syntax/invalid/our_synt_tests/robin-test8-missSemi.deca
//Error: missing ";" at the end of one declaration statement after an Instruction.

{
String i = "Hello world";
int x
float y;
}
